SASS first task finished

--- a/Web/CSS/4.SASS/1.HomeworkRedoWithSASS/1.HomeworkRedoWithSASS.csproj
+++ b/Web/CSS/4.SASS/1.HomeworkRedoWithSASS/1.HomeworkRedoWithSASS.csproj
@@ -58,12 +58,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="style.css">
+      <DependentUpon>style.scss</DependentUpon>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="style.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
